Phase5/negative_tests/prog12.dlp
//Should return integer but returns boolean

int myFunction() {
    return true;
}

int main() {
    myFunction();
    return 0;
}